@@ -36,7 +36,7 @@ typedef struct _AoTasks			AoTasks;
 typedef struct _AoTasksClass	AoTasksClass;
 
 GType			ao_tasks_get_type		(void);
-AoTasks*		ao_tasks_new			(gboolean enable);
+AoTasks*		ao_tasks_new			(gboolean enable, const gchar *tokens);
 void			ao_tasks_update			(AoTasks *t, GeanyDocument *cur_doc);
 void			ao_tasks_remove			(AoTasks *t, GeanyDocument *cur_doc);
 void			ao_tasks_activate		(AoTasks *t);
